fix: initial render show a blank page and layout shift when going to next sections

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -6,9 +6,6 @@
   align-items: flex-start;
   color: #cacaca !important;
 }
-.active {
-  color: '#fbd38d' !important;
-}
 .app {
   color: #cacaca !important;
   min-width: 280px;
